--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,44 @@
 {
-    "name": "rpage/citation-matching",
-    "authors": [
-        {
-            "name": "Roderic Page",
-            "email": "rdmpage@gmail.com"
-        }
-    ],
-    "require": {
-        "easyrdf/easyrdf": "^1.1",
-        "ml/json-ld": "^1.2",
-        "endyjasmi/cuid": "2.*",
-        "smalot/pdfparser": "^2.2"    
+  "name": "rpage/citation-matching",
+  "authors": [
+    {
+      "name": "Roderic Page",
+      "email": "rdmpage@gmail.com"
     }
+  ],
+  "repositories": [
+    {
+      "type": "package",
+      "package": {
+        "name": "citation-style-language/locales",
+        "version": "1.0.0",
+        "source": {
+          "type": "git",
+          "url": "https://github.com/citation-style-language/locales.git",
+          "reference": "master"
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "citation-style-language/styles",
+        "version": "1.0.0",
+        "source": {
+          "type": "git",
+          "url": "https://github.com/citation-style-language/styles.git",
+          "reference": "master"
+        }
+      }
+    }
+  ],
+  "require": {
+    "easyrdf/easyrdf": "^1.1",
+    "ml/json-ld": "^1.2",
+    "endyjasmi/cuid": "2.*",
+    "smalot/pdfparser": "^2.2",
+    "citation-style-language/locales": "@dev",
+    "citation-style-language/styles": "@dev",
+    "seboettg/citeproc-php": "^2"
+  }
 }
